--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -1,4 +1,4 @@
 <!-- start custom footer snippets -->
-<a href="/sitemap/">Sitemap</a>
+&copy; 2023 Enrique Alonso-Perez.
 <!-- end custom footer snippets -->
 
