--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -93,7 +93,7 @@ $xing-color                 : #006567;
 $link-color                 : #cfe8ef;
 $link-color-hover           : mix(#000, $link-color, 25%);
 $link-color-visited         : mix(#fff, $link-color, 25%);
-$masthead-link-color        : $primary-color;
+$masthead-link-color        : #cfe8ef;
 $masthead-link-color-hover  : mix(#000, $primary-color, 25%);
 
 
