--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -60,11 +60,11 @@ $code-background-color-dark : $light-gray;
 $text-color                 : $dark-gray;
 $border-color               : $light-gray;
 
-$primary-color              : #5b7c99;
+$primary-color              : #223835;
 $success-color              : #62c462;
 $warning-color              : #f89406;
 $danger-color               : #ee5f5b;
-$info-color                 : #5b7c99;
+$info-color                 : #223835;
 
 /* brands */
 $behance-color              : #1769FF;
