--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -58,7 +58,7 @@ $background-color           : #badbd4;
 $code-background-color      : #fafafa;
 $code-background-color-dark : $light-gray;
 $text-color                 : $dark-gray;
-$border-color               : $light-gray;
+$border-color               : #3b6363;
 
 $primary-color              : #223835;
 $success-color              : #62c462;
